--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
         <img src="./images/nissan.webp" alt="">
         <img src="./images/toyota.webp" alt="">
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.min.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
