--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework-7</title>
-    <style>
+    <!-- <style>
         ul {
             list-style: none;
             display: grid;
@@ -58,7 +58,7 @@
             font-size: 20px;
             font-weight: 500;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <script src="./app.js"></script>
