--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>homework-7</title>
 </head>
 <body>
+    <h1>Test</h1>
     <script type="module" src="./app.js"></script>
 </body>
 </html>
