--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Test</h1>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
