--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>homework-7</title>
 </head>
 <body>
-    <script src="/index.0641b553.js" defer=""></script>
+    <h1>Test</h1>
+    <script src="/index.975ef6c8.js" defer=""></script>
 </body>
 </html>
