--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework-7</title>
-</head>
-<body>
-    <h1>Test</h1>
-    <script src="/index.975ef6c8.js" defer=""></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>homework-7</title></head><body> <script type="module" src="index.40275db7.js"></script> </body></html>
